# pycblas

./: .copier-answers.yml  .gitignore  CMakeLists.txt  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml
docs/: conf.py  index.md
src/: cblas.h  cblas.pxd  pycblas.cpp  pycblas.pyx
src/pycblas/: __init__.py  _loader.py
src/pycblas/cblas/: blasext.py  l1.py  l3.py
src/pycblas/util/: arrays.py  types.py
src/pymkl/: __init__.py  _loader.py
src/pymkl/cblas/: __init__.py  blasext.py  l1.py  l3.py
src/pymkl/util/: arrays.py  types.py
tests/: test_blasext.py  test_compiled.py  test_l1blas.py  test_l3blas.py  test_package.py
